fixed compilation errors for apigee client code

--- a/ArtCollective/.classpath
+++ b/ArtCollective/.classpath
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/SkylightUtils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ArtCollectiveUtils"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="/Users/ram/jdeveloper/mywork/ArtCollection_Repository/ArtCollective/libs/jackson-core-asl-1.9.1.jar"/>
+	<classpathentry kind="lib" path="/Users/ram/jdeveloper/mywork/ArtCollection_Repository/ArtCollective/libs/jackson-mapper-asl-1.9.1.jar"/>
+	<classpathentry kind="lib" path="/Users/ram/jdeveloper/mywork/ArtCollection_Repository/ArtCollective/libs/spring-android-core-1.0.0.M4.jar"/>
+	<classpathentry kind="lib" path="/Users/ram/jdeveloper/mywork/ArtCollection_Repository/ArtCollective/libs/spring-android-rest-template-1.0.0.M4.jar"/>
+	<classpathentry kind="lib" path="/Users/ram/jdeveloper/mywork/ArtCollection_Repository/ArtCollective/libs/usergrid-java-client-0.0.7.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
