--- a/ArtCollective/project.properties
+++ b/ArtCollective/project.properties
@@ -11,4 +11,4 @@
 split.density=false
 # Project target.
 target=android-17
-android.library.reference.1=../SkylightUtils
+android.library.reference.1=../ArtCollectiveUtil
